--- a/index.html
+++ b/index.html
@@ -10,13 +10,13 @@
     <script type="module" src="./utils/Events.js" defer></script>
 </head>
 <body>
-    <h1>FOR MIJO</h1>
+    <h1>Etch-A-Sketch</h1>
     <div class="menu-board-container">
-        <div class="Menu">
+        <div class="options-menu">
             <button class="clear">Clear</button>
+            <span class="num-squares">16 X 16</span>
             <input type="range" min="16" max="64" value="16" class="slider">
         </div> 
-        
         <div class="squares-container"></div>
     </div>
     
